[gd_scene load_steps=26 format=3 uid="uid://bvo44du5bpkbq"]

[ext_resource type="Script" uid="uid://c683rweokjnfp" path="res://Scripts/board.gd" id="1_80qdv"]
[ext_resource type="Script" uid="uid://bfim5786ax16d" path="res://Scenes/camera_3d.gd" id="2_eafhi"]
[ext_resource type="Script" uid="uid://cof8acd11t0we" path="res://Scenes/online_play.gd" id="3_eafhi"]
[ext_resource type="PackedScene" uid="uid://7p8dxs2ubagd" path="res://Scenes/Menus/in_game_ui.tscn" id="4_1l3qu"]
[ext_resource type="Shader" uid="uid://dlk3dm4s7jf4f" path="res://Assets/Shaders/invisible_canvas.gdshader" id="4_f3v75"]
[ext_resource type="PackedScene" uid="uid://csny3if363son" path="res://Scenes/paused_menu.tscn" id="4_riaai"]
[ext_resource type="Texture2D" uid="uid://b456wrsaj5ixr" path="res://Assets/WoodGui.png" id="5_riaai"]
[ext_resource type="Script" uid="uid://umip4dnym153" path="res://Scenes/piece_selection_slider.gd" id="6_xdost"]
[ext_resource type="FontFile" uid="uid://c1852jjypyisc" path="res://Assets/The Centurion.otf" id="7_5mqdr"]
[ext_resource type="Script" uid="uid://cij3gon1i4o5u" path="res://Scenes/network_test_panel.gd" id="8_1q88g"]
[ext_resource type="AudioStream" uid="uid://dc3eyuup2hffq" path="res://Assets/SFX/minecraftPop.mp3" id="8_f3v75"]
[ext_resource type="Shader" uid="uid://dx71dpo0jac3j" path="res://Scenes/paused_menu.gdshader" id="9_1l3qu"]
[ext_resource type="AudioStream" uid="uid://bhfma0x8j5j5x" path="res://Assets/SFX/tokenMove.wav" id="9_156g6"]
[ext_resource type="Script" uid="uid://bj2b5en04xdl6" path="res://Scenes/network_manager.gd" id="10_eafhi"]
[ext_resource type="Texture2D" uid="uid://d57ybp8mq73m" path="res://Assets/wood_assets/Screenshot 2025-03-22 000409.png" id="11_5mqdr"]
[ext_resource type="Script" uid="uid://dfykhkkqfytps" path="res://Scenes/Menus/texture_button.gd" id="12_f3v75"]
[ext_resource type="Script" uid="uid://c34wxpe4rxelx" path="res://Scenes/dragon_game.gd" id="17_cmjm5"]
[ext_resource type="PackedScene" uid="uid://bdjlh2vowe56m" path="res://Assets/3dCharacters/Dragon2.glb" id="18_iqpeq"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_4r3ic"]
sky_top_color = Color(0.201103, 0.414398, 0.868467, 1)
sky_horizon_color = Color(0.514926, 0.661726, 0.884476, 1)
ground_bottom_color = Color(0.0823529, 0.196078, 0.482353, 1)
ground_horizon_color = Color(0.0823529, 0.196078, 0.482353, 1)
sun_angle_max = 272.35

[sub_resource type="Sky" id="Sky_hviba"]
sky_material = SubResource("ProceduralSkyMaterial_4r3ic")

[sub_resource type="Environment" id="Environment_p0gk8"]
background_mode = 2
sky = SubResource("Sky_hviba")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_156g6"]
shader = ExtResource("4_f3v75")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5mqdr"]
shader = ExtResource("4_f3v75")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_riaai"]
shader = ExtResource("9_1l3qu")

[sub_resource type="Curve3D" id="Curve3D_ditnb"]
closed = true
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -49.631, 0, 13.727, 0, 0, 0, 0, 0, 0, 26.006, 0, 18.045, 0, 0, 0, 0, 0, 0, -41.901, 0, -15.9, 0, 0, 0, 0, 0, 0, 20.573, 0, 36.624, 0, 0, 0, 0, 0, 0, -46.053, 0, 53.299, 0, 0, 0, 0, 0, 0, 25.614, 0, -12.23, 0, 0, 0, 0, 0, 0, -55.033, 0, 15.299, 0, 0, 0, 0, 0, 0, 9.492, 0, -44.737, 0, 0, 0, 0, 0, 0, -26.106, 0, 74.266, 0, 0, 0, 0, 0, 0, -22.876, 0, -35.247, 0, 0, 0, 0, 0, 0, 0.0902939, 0.520256, 65.3657),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 11

[node name="board2" type="Node3D"]
script = ExtResource("1_80qdv")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-4.37114e-08, -0.766045, 0.642788, 0, 0.642788, 0.766045, -1, 3.34849e-08, -2.80971e-08, -40, 13, -50)
fov = 74.5992
script = ExtResource("2_eafhi")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_p0gk8")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.979575, -0.20082, -0.0101731, 0, -0.0505929, 0.998719, -0.201078, -0.978321, -0.0495596, 0, 0, 0)

[node name="GameControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_eafhi")

[node name="CanvasLayer" type="CanvasLayer" parent="GameControl"]

[node name="PanelContainer" type="PanelContainer" parent="GameControl/CanvasLayer"]
material = SubResource("ShaderMaterial_156g6")
offset_right = 40.0
offset_bottom = 40.0

[node name="PausedMenu" parent="GameControl/CanvasLayer" instance=ExtResource("4_riaai")]
visible = false

[node name="InGameUI" parent="GameControl" instance=ExtResource("4_1l3qu")]
material = SubResource("ShaderMaterial_5mqdr")
layout_mode = 1

[node name="Wait_Timer" type="Timer" parent="GameControl/InGameUI"]
wait_time = 4.0

[node name="MessageLabel" type="Label" parent="GameControl"]
visible = false
layout_mode = 0
offset_left = 12.0
offset_top = 272.0
offset_right = 150.0
offset_bottom = 311.0

[node name="WoodPanel" type="TextureRect" parent="GameControl"]
layout_mode = 0
offset_left = 483.0
offset_top = 537.0
offset_right = 683.0
offset_bottom = 572.0
texture = ExtResource("5_riaai")

[node name="Left Buffer" type="HBoxContainer" parent="GameControl/WoodPanel"]
layout_mode = 0
offset_left = -66.0
offset_top = -3.0
offset_right = 7.0
offset_bottom = 37.0

[node name="HSlider" type="HSlider" parent="GameControl/WoodPanel"]
layout_mode = 2
offset_left = 11.0
offset_top = 3.0
offset_right = 168.0
offset_bottom = 29.0
min_value = 1.0
max_value = 15.0
value = 8.0
script = ExtResource("6_xdost")

[node name="NumPiecesLabel" type="Label" parent="GameControl/WoodPanel"]
layout_mode = 0
offset_left = 171.0
offset_top = 1.0
offset_right = 191.0
offset_bottom = 34.0
theme_override_fonts/font = ExtResource("7_5mqdr")
theme_override_font_sizes/font_size = 25

[node name="Right Buffer" type="HBoxContainer" parent="GameControl/WoodPanel"]
layout_mode = 0
offset_left = 195.0
offset_top = -4.0
offset_right = 279.0
offset_bottom = 36.0

[node name="Wait_Timer" type="Timer" parent="GameControl"]

[node name="NetworkTestPanel" type="Panel" parent="GameControl"]
visible = false
layout_mode = 0
offset_left = 9.0
offset_top = 228.0
offset_right = 197.0
offset_bottom = 380.0
script = ExtResource("8_1q88g")

[node name="JoinCodeLabel" type="Label" parent="GameControl/NetworkTestPanel"]
layout_mode = 0
offset_left = 12.0
offset_top = 8.0
offset_right = 99.0
offset_bottom = 32.0

[node name="JoinCodeLineEdit" type="LineEdit" parent="GameControl/NetworkTestPanel"]
layout_mode = 0
offset_left = 5.0
offset_top = 40.0
offset_right = 110.0
offset_bottom = 71.0

[node name="HostButton" type="Button" parent="GameControl/NetworkTestPanel"]
layout_mode = 0
offset_left = 12.0
offset_top = 75.0
offset_right = 56.0
offset_bottom = 106.0
text = "Host"

[node name="JoinButton" type="Button" parent="GameControl/NetworkTestPanel"]
layout_mode = 0
offset_left = 69.0
offset_top = 74.0
offset_right = 107.0
offset_bottom = 105.0
text = "Join"

[node name="DiscoverButton" type="Button" parent="GameControl/NetworkTestPanel"]
layout_mode = 0
offset_left = 118.0
offset_top = 39.0
offset_right = 193.0
offset_bottom = 70.0
text = "Discover"

[node name="MoveTimeoutTimer" type="Timer" parent="GameControl"]

[node name="ColorRect" type="ColorRect" parent="GameControl"]
material = SubResource("ShaderMaterial_riaai")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -39.0
offset_top = -41.0
offset_right = -39.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.266667, 0.266667, 0.266667, 0)

[node name="CanvasLayer2" type="CanvasLayer" parent="GameControl"]

[node name="pauseBtnPanel" type="PanelContainer" parent="GameControl/CanvasLayer2"]
visible = false
offset_left = 559.0
offset_top = 595.0
offset_right = 594.0
offset_bottom = 631.0

[node name="pauseBtn" type="TextureButton" parent="GameControl/CanvasLayer2"]
top_level = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -51.0
offset_right = 141.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("11_5mqdr")
script = ExtResource("12_f3v75")

[node name="boardPlace" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_f3v75")
volume_db = 2.0

[node name="tokenMove" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_156g6")

[node name="NetworkManager" type="Node" parent="."]
script = ExtResource("10_eafhi")

[node name="StatusLabel" type="Label" parent="NetworkManager"]
offset_left = 12.0
offset_top = 618.0
offset_right = 113.0
offset_bottom = 641.0

[node name="Dragon" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -45, 5, -60.8563)
script = ExtResource("17_cmjm5")

[node name="Path3D" type="Path3D" parent="Dragon"]
curve = SubResource("Curve3D_ditnb")

[node name="PathFollow3D" type="PathFollow3D" parent="Dragon/Path3D"]
transform = Transform3D(-0.0569947, 0, -0.998356, 0, 0.999995, 0, 0.998355, 0, -0.0569947, -49.631, 0, 13.727)

[node name="Dragon2" parent="Dragon/Path3D/PathFollow3D" instance=ExtResource("18_iqpeq")]
transform = Transform3D(-0.25, 0, -2.18557e-08, 0, 0.25, 0, 2.18557e-08, 0, -0.25, 0, 0, 0)

[connection signal="timeout" from="GameControl/InGameUI/Wait_Timer" to="GameControl/InGameUI" method="_on_wait_timer_timeout"]
[connection signal="mouse_entered" from="GameControl/CanvasLayer2/pauseBtn" to="GameControl" method="pauseHvrd"]
[connection signal="mouse_exited" from="GameControl/CanvasLayer2/pauseBtn" to="GameControl" method="pauseExt"]
[connection signal="pressed" from="GameControl/CanvasLayer2/pauseBtn" to="GameControl" method="_on_pause_btn_pressed"]
